Fixed settings checkboxes wrapping text to new line below

--- a/style.css
+++ b/style.css
@@ -204,3 +204,9 @@ input[type="checkbox"]:checked::before {
     color: white;
     font-size: 0.9em;
 }
+
+.field-inline * {
+    display: flex;
+    flex-direction: row;
+    gap: .3rem;
+}
